# meeting-minutes

./: .gitignore  README.md  meetily-backend.rb
backend/: .env.example  .gitignore  API_DOCUMENTATION.md  README.md  build_whisper.cmd  clean_start_backend.cmd  clean_start_backend.sh  download-ggml-model.cmd  install.sh  pyproject.toml  requirements.txt  start_with_output.cmd  start_with_output.ps1
backend/app/: database.py  db.py  main.py  models.py  schemas.py  transcript_processor.py
backend/app/services/: audio_service.py  summarization_service.py  transcription_service.py
backend/examples/: run_summary_workflow.py
backend/experiments/: .gitignore
backend/experiments/rust_based_implementation/: Cargo.toml
backend/experiments/rust_based_implementation/src/: audio.rs  main.rs
backend/tests/: __init__.py  conftest.py  test_main.py
backend/tests/resources/: test_audio.py
frontend/: README.md  clean_build.sh  clean_build_windows.bat  clean_run.sh  clean_run_windows.bat  package.json
frontend/src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
frontend/src-tauri/src/: analytics.rs  api.rs  deepgram.rs  groq.rs  lib.rs  main.rs  windows_permissions.rs
frontend/src-tauri/src/audio/: core.rs  stt.rs
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: About.tsx  AnalyticsProvider.tsx  LoadingAnimation.tsx  Logo.tsx  MessageToast.tsx  ModelSettingsModal.tsx  RecordingControls.tsx  ServerSettings.tsx  SettingTabs.tsx  TranscriptSettings.tsx  TranscriptView.tsx
frontend/src/lib/: analytics.ts
(+12 files in other folders)
