[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-minutes"
version = "0.1.0"
authors = [
  { name="Sujith", email="" },
]
description = "Meeting Minutes Assistant"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
addopts = "-v -s"
