[package]
name = "rust_based_implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"
hound = "3.5.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"

# Audio processing dependencies
cpal = { git = "https://github.com/Kree0/cpal.git", branch = "master" }
dasp_signal = "0.11.0"
dasp_ring_buffer = "0.11.0"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_sample = "0.11.0"
realfft = "3.4.0"
rustfft = "6.1.0"
bytemuck = "1.16.1"
rubato = "0.15.0"

[target.'cfg(target_os = "macos")'.dependencies]
once_cell = "1.17.1"
objc = "0.2.7"
